[gd_scene load_steps=4 format=3 uid="uid://bac46tw2qwbm"]

[ext_resource type="Script" path="res://scripts/ui/combat_hud.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/panels/ship_info_panel.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/panels/turn_order_panel.tscn" id="3"]

[node name="CombatHUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="ShipInfoPanel" parent="." instance=ExtResource("2")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -220.0
offset_right = 270.0
offset_bottom = -20.0
grow_vertical = 0

[node name="TurnOrderDisplay" parent="." instance=ExtResource("3")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 320.0
grow_horizontal = 0

[node name="ActionButtons" type="VBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -220.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 5

[node name="WeaponLabel" type="Label" parent="ActionButtons"]
layout_mode = 2
text = "WEAPONS:"
horizontal_alignment = 1

[node name="Weapon0Button" type="Button" parent="ActionButtons"]
layout_mode = 2
text = "Weapon 1"

[node name="Weapon1Button" type="Button" parent="ActionButtons"]
layout_mode = 2
text = "Weapon 2"

[node name="Separator" type="HSeparator" parent="ActionButtons"]
layout_mode = 2

[node name="EndTurnButton" type="Button" parent="ActionButtons"]
layout_mode = 2
text = "End Turn (Space)"

[node name="StatusLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 43.0
grow_horizontal = 2
text = "Combat Ready"
horizontal_alignment = 1
